examples/datalog/12_errors/28_mutual_negation_cycle_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_neg_cycle
Knowledge graph 'test_neg_cycle' created.
Switched to knowledge graph: test_neg_cycle
> .kg use test_neg_cycle
Switched to knowledge graph: test_neg_cycle
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> +a(X) :- base(X), !b(X).
Rule 'a' registered.
> +b(X) :- base(X), !a(X).
Script error: Failed to register rule: Unstratified negation: 'a' negates 'b' within a recursive cycle. Negation through recursion is not supported. Cycle: [a, b]
