examples/datalog/12_errors/28_mutual_negation_cycle_error.dl
% Test: Mutual negation cycle error
% Expected: Error - negation cycle between a and b (non-stratifiable)
% Category: 12_errors
% Priority: P0 CRITICAL - Stratification correctness

.kg create test_neg_cycle
.kg use test_neg_cycle

+base[(1,), (2,), (3,)].

% a depends negatively on b, b depends negatively on a
% This is non-stratifiable and should be rejected
+a(X) :- base(X), !b(X).
+b(X) :- base(X), !a(X).

.kg use default
.kg drop test_neg_cycle
